--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                                 <li class="current">><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
                                 <li><a href="schedule.html">Schedule</a></li>
-                                <li><a href="sponsor.html">Sponsor Oportunities</a></li>
+                                <li><a href="sponsor.html">Sponsor Opportunities</a></li>
                             </ul>
                         </nav>
 
@@ -66,7 +66,7 @@
                                             <p>EASYGO ITN is a research framework, funded by the European Commission, that focuses on tackling the geothermal challenges of today and train tomorrow’s leading geothermal energy experts. This framework includes the IDEA League universities TU Delft (TUD), ETH Zurich (ETH), RWTH Aachen University (RWTH), Politecnico di Milano (PoliMi) and 10 industry partners that are addressing this question from different perspectives, integrating geology, geophysics, geochemistry, advanced modeling and process engineering. For more information about the framework and individual projects, visit the <a href="https://easygo-itn.eu/">EASYGO Website</a> </p>
                                             </header>
                                             
-                                            <p> The EASYGO team is proud to host EGPD 2022 in one of our participating universities: RWTH Aachen University. This university is the known for its world-class university education in Natural Sciences and Engineering and diversity The many stimulating ideas are already having an impact in Aachen and the entire tri-border region of Germany, Belgium and the Netherlands. An innovative knowledge community is evolving that is closely networked with some of the world’s leading research and industry partners. </p>
+                                            <p> The EASYGO team is proud to host EGPD 2022 in one of our main collaborating university : RWTH Aachen University. RWTH Aachen is known for its world-class education in natural sciences and engineering. Stimulating ideas of cutting-edge technology and engineering are roaming around the entire tri-border region of Germany, Belgium and the Netherlands, providing the scientific network for young researchers and engineers of future. An innovative science community is evolving by encouraging networking with the world’s leading research and industry partners. </p>
                                             <!-- Working on this part. There is alot of information about travel and stay that we need to include so it may be better to have an entire section or tab on travel plans further on
                                             <header>
                                                 <h2> About Aachen </h2>
