--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                                                 <h3>What is EGPD?</h3>
                                                 <p>
-                                                The European Geothermal PhD Days is an annual event organised by PhD students from different universities all around the continent. Now in its 13th installment, it was started in 2010 as an initiative of the EERA joint programme on geothermal energy.Every year, between 50 and 80 young scientists from various research fields in geothermal energy come together to share knowledge and experience about this promising energy source.</p>
+                                                The European Geothermal PhD Days is an annual event organised by PhD students from different universities all around the continent. Now in its 13th instalment, it was started in 2010 as an initiative of the EERA joint programme on geothermal energy. Every year, between 50 and 80 young scientists from various research fields in geothermal energy come together to share knowledge and experience about this promising energy source.</p>
 
                                                 <p>
                                                 No matter what stage you are at, EGPD 2022 is an excellent opportunity to (re)connect with like-minded PhD students and Early-Stage Researchers in the Geothermal Energy sector across Europe.</p>
