--- a/attend.html
+++ b/attend.html
@@ -46,10 +46,10 @@
                                     <article>
                                         <header>
                                         <h2>Submit your abstract and enjoy a unique opportunity!</h2>
-                                        <p>EGPD has been connecting future PhD students and doctorates for the last decade initiating scientific exchange and hosting excellent research. </p>
+                                        <p>EGPD has been connecting future PhD students over the last decade, initiating scientific exchange and hosting excellent research. </p>
                                         </header>
                                         
-                                        <p>EGPD will offer the opportunity for EGPD students to present their work in poster sessions. Moreover, Aachen hosts high potential sites for geothermal energy, which allows site visits to Weisweiler and TRUDI fields. We are excited for your contribution and would like welcome you to Aachen soon!</p>
+                                        <p>EGPD will offer the opportunity for PhD students to present their work in poster sessions. Moreover, Aachen hosts high potential sites for geothermal energy, which allows site visits to Weisweiler and TRUDI fields. We are excited about your contribution and would like to welcome you to Aachen soon!</p>
                                         </header>
                                             
                                         <h3>Submission guidelines</h3>
