--- a/sponsor.html
+++ b/sponsor.html
@@ -44,7 +44,7 @@
 									<!-- Sidebar -->
 
 										<section>
-                                            <h3>Sponsor oportunity</h3>
+                                            <h3>Sponsor opportunity</h3>
                                             <p>Would you like the logo of your company here?</p>
 											<footer>
 												<a href="mailto: egpd2022@erdw.ethz.ch?subject=Sponsor_Inquiry" class="button">Sponsor</a>
@@ -64,18 +64,18 @@
 
 										<article>
 											<header>
-												<h2>Sponsor Oportunities</h2>
-												<p> Between 70 to 100 passionate Geothermal PhD students from around the globe will gather at the EGPD to connect with colleagues, enhance their knowledge, learn about new developements, and study new ways of making the energy transition possible.</p>
+												<h2>Sponsor Opportunities</h2>
+												<p> Between 70 to 100 passionate Geothermal PhD students from around the globe will gather at the EGPD to connect with colleagues, learn about new developments, and study new ways of making the energy transition possible.</p>
                                             </header>
                                             
                                             <p>
-                                                EGPD is your opportunity to advertise your company to the future leaders in the geothermal energy industry. Aditionally you will have the oportunity to contact experts interested in your buisness, gain customers, and to increase the visibility of  your brand, product, or service amongst the future of the Geothermal industry. It is also a great oportunity to show the investment that your company is making on the energy transition and to showcase your latest products and solutions. </p>
+                                            EGPD is your opportunity to advertise your company to the future leaders in the geothermal energy industry. Additionally, you will have the opportunity to contact experts interested in your business, gain customers, and increase your brand's visibility amongst the future of the Geothermal industry. It is also a great opportunity to show your company's investment in the energy transition and showcase your latest products and solutions. </p>
 											</header>
 
 
 											<p><h3>Sponsorship Options</h3>
                                             
-                                            <p>The following is a list of sponsorship opportunities that help make this a successful and pleasant conference. Please consider donating towards one of these financial expenditures of the event. In return, we will include your business on our website as a valued sponsor with the respective tier/level and also acknowledge your contribution during the week of the event.</p>
+                                            <p>The following is a list of sponsorship opportunities that help make this a successful and pleasant conference. Please consider donating towards one of these financial expenditures of the event. In return, we will include your business on our website as a valued sponsor with the respective tier/level and acknowledge your contribution during the event week.</p>
 
                                             <li> Coffee and Tea Breaks</li>
                                             <li> Lunch and/or Dinner</li>
