Change from EGPD's hosts to about

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                                         <p>EGPD is a way to efficiently spread scientific knowledge related to geothermal energy by making an event that attracts young specialists. It emulates youth in geosciences and provides a framework to make connections in a qualitative way. It provides a dedicated and informal occasion for the PhD students to exchange with their pair and to develop their network.</p>
                                         
 					<header>
-					    <h2> EGPD's Hosts - EASYGO ITN </h2>
+					    <h2> About the hosts - EASYGO ITN </h2>
 					</header>
 					
 					<p>The EASYGO Innovative Training Network, is the first standardized doctoral education program in Europe focused on geothermal operations. This project hosts 13 PhD students of the IDEA League universities TU Delft (TUD), ETH Zurich (ETH), RWTH Aachen University (RWTH), and Politecnico di Milano (PoliMi). EASYGO graduates, in collaboration with 10 industry partners, are working towards making geothermal operations more efficient and safe.</p>
