--- a/sponsor.html
+++ b/sponsor.html
@@ -30,6 +30,8 @@
                                 <li><a href="attend.html">Attend and present</a></li>
                                 <li><a href="schedule.html">Schedule</a></li>
                                 <li class="current"><a href="sponsor.html">Sponsor Oportunities</a></li>
+                                <li><a href="travelandaccomodation.html">Travel & Accomodation</a></li>
+
                             </ul>
                         </nav>
 
