--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 								<li><a href="attend.html">Abstract Submission</a></li>
 								<li><a href="schedule.html">Schedule</a></li>
 								<li><a href="sponsor.html">Sponsor Oportunities</a></li>
+                                <li><a href="travelandaccomodation.html">Travel & Accomodation</a></li>
 							</ul>
 						</nav>
 
