--- a/schedule.html
+++ b/schedule.html
@@ -29,6 +29,7 @@
                                 <li><a href="attend.html">Abstract Submission</a></li>
                                 <li class="current"><a href="schedule.html">Schedule</a></li>
                                 <li><a href="sponsor.html">Sponsor Oportunities</a></li>
+                                <li><a href="travelandaccomodation.html">Travel & Accomodation</a></li>
                             </ul>
                         </nav>
 
