Changed price to rate
- First hotel on the list. Wording: price -> rate.

--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -71,7 +71,7 @@
 					</header>
 
 						<ul>
-							<li><a href="https://all.accor.com/hotel/0967/index.en.shtml?dateIn=&nights=&compositions=1&stayplus=false#origin=ibis"> ibis Aachen Marschiertor (Aix la Chapelle) Hotel (RWTH Special Price)  </a></li>
+							<li><a href="https://all.accor.com/hotel/0967/index.en.shtml?dateIn=&nights=&compositions=1&stayplus=false#origin=ibis"> ibis Aachen Marschiertor (Aix la Chapelle) Hotel (RWTH Special Rate)  </a></li>
 
 							<li><a href="https://all.accor.com/hotel/5326/index.en.shtml?utm_campaign=seo+maps&utm_medium=seo+maps&utm_source=google+Maps"> Mercure Hotel </a> </li>
 						
