--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -67,11 +67,11 @@
 					<header>
 						<h2>Recommended Hotel and Accommodations </h2>
 
-						The hotels listed below are all at 10–15-minute walking distance to the event location and city center. 
+                        The hotels listed below are at 10–15-minute walking distance from the event's location and city center.
 					</header>
 
 						<ul>
-							<li><a href="https://all.accor.com/hotel/0967/index.en.shtml?dateIn=&nights=&compositions=1&stayplus=false#origin=ibis"> ibis Aachen Marschiertor (Aix la Chapelle) Hotel (RWTH Special Rate)  </a></li>
+							<li><a href="https://all.accor.com/hotel/0967/index.en.shtml?dateIn=&nights=&compositions=1&stayplus=false#origin=ibis"> ibis Aachen Marschiertor (Aix la Chapelle) Hotel </a> (RWTH Special Rate) </li>
 
 							<li><a href="https://all.accor.com/hotel/5326/index.en.shtml?utm_campaign=seo+maps&utm_medium=seo+maps&utm_source=google+Maps"> Mercure Hotel </a> </li>
 						
