--- a/attend.html
+++ b/attend.html
@@ -61,9 +61,10 @@
                                             
                                         <h3>Submission guidelines</h3>
                                         <p>
-                                        All participants must submit an abstract and are expected to present their work in poster sessions during the conference. Registration is FREE of charge! Guidelines are as following:
+                                        All participants must submit an abstract and are expected to present their work in poster sessions during the conference. Registration is FREE of charge! 
+					For submitting and abstract please follow these guidelines:
                                         
-                                        <li>Please include the title of your poster, authors, and author's affiliations.</li>
+                                        <li>Include the title of your poster, authors, and author's affiliations.</li>
 					<li>Indicate the session and the topic you'd like to participate.<li>	
                                         <li>The body of your abstract should not exceed 300 words.</li>
                                         <li>The abstract should be sent as a word document.</li>
