--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -113,10 +113,16 @@
                     </header>
                 </div>
             </section>
-            
-
-			<!-- Footer -->
-				<div id="footer">
+            <center>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2522.733774008039!2d6.064753489724024!3d50.780508550701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c09979a153d7b5%3A0x8916c62aa69322e7!2sRWTH%20Aachen%20University!5e0!3m2!1sen!2sde!4v1636721951688!5m2!1sen!2sde"  width="80%"
+                    height="450"
+                    style="border:0"
+                    loading="lazy"
+                    allowfullscreen>
+                </iframe>
+                </center>
+            <!-- Footer -->
+                <div id="footer">
 
                     <!-- Icons -->
                         <ul class="icons">
@@ -125,19 +131,18 @@
                             <li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                             <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
                         </ul>
-		</div>
-			    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2522.733774008039!2d6.064753489724024!3d50.780508550701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c09979a153d7b5%3A0x8916c62aa69322e7!2sRWTH%20Aachen%20University!5e0!3m2!1sen!2sde!4v1636721951688!5m2!1sen!2sde" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
+
+                    <!-- Copyright -->
+                        <div class="copyright">
+                            <ul class="menu">
                                 <li>&copy; EGPD 2022. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                                 <li>Aachen Image: <a href="http://unsplash.com">Unsplash</a></li>
-							</ul>
-						</div>
+                            </ul>
+                        </div>
 
-				</div>
+                </div>
 
-		</div>
+        </div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
