--- a/attend.html
+++ b/attend.html
@@ -145,6 +145,9 @@
 
                                             <p>In this session, we invite contributions that seek a deeper understanding of induced and triggered seismicity related to the operation of geothermal power plants. We particularly encourage novel contributions on seismic monitoring techniques as well as microseismic-source characterization. We also welcome research on traffic-light systems for decision making during the injection and extraction of geothermal fluids. </p>
                                         </details>
+                                        <h3></h3>
+                                        <h3>4. Other </h3>
+                                        <summary>Any other topics related to geothermal, not mentioned in our list, are welcome and will be fit in the program where it makes the most sense.</summary>
                                     </article>
 
                             </div>
