Adding the sponsors

--- a/schedule.html
+++ b/schedule.html
@@ -28,7 +28,12 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
                                 <li class="current"><a href="schedule.html">Schedule</a></li>
-                                <li><a href="sponsor.html">Sponsor Oportunities</a></li>
+                                <li><a href="oursponsors.html">Sponsors</a>
+                                    <ul>
+                                        <li><a href="oursponsors.html">Our sponsors</a></li>
+                                        <li><a href="sponsor.html">Sponsor opportunities</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="travelandaccomodation.html">Travel & Accomodation</a></li>
                             </ul>
                         </nav>
