--- a/oursponsors.html
+++ b/oursponsors.html
@@ -57,7 +57,7 @@
                 <div class="container">
                     <div class="row gtr-uniform">
                         <div class="col-4"><span class="image fit"><img src="images/sponsors/SmartSoloLogo.jpg" alt=""></span></div>
-                        <div class="col-4"><span class="image fit"><img src="images/sponsors/rwe.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="./images/sponsors/rwe.jpg" alt=""></span></div>
                         
                         <div class="col-4"><span class="image fit"><img src="images/sponsors/rwe.jpg" alt=""></span></div>
                         
