--- a/oursponsors.html
+++ b/oursponsors.html
@@ -64,19 +64,18 @@
                     </div>
                 </div>
                 <div class="box alt">
-                                                        <div class="row gtr-uniform">
-                                                            <div class="col-12"><span class="image fit"><img src="images/pic13.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt=""></span></div>
-                                                            <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-                                                        </div>
-                                                    </div>
+                    <div class="row gtr-uniform">
+                        <div class="col-4"><span class="image fit"><img src="images/sponsors/rwe.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+                    </div>
+                </div>
             </section>
             
             <section class="wrapper style2">
