--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>#EGPD2022 Aachen<em> organised by <a href="https://easygo-itn.eu">EASYGO</a></em></h2>
+						<h2>#EGPD2022 Aachen<em> Free of charge!</em></h2>
 						<a href="about.html" class="button">Learn More</a>
 					</header>
 				</section>
