--- a/about.html
+++ b/about.html
@@ -118,14 +118,14 @@
                                     </li>
                                     <li>
                                         <h3>
-                                        <span class="number">2</span>
+                                        <span class="number">2. </span>
                                         Who can present at #EGPD2022?
                                         </h3>
                                         <div class="numbredContent minHeight"> Energized and passionate PhD students from around Europe will gather in-person at the EGPD 2022 to connect with colleagues, broaden their knowledge base, participate in fieldwork experiences and embrace the joy of science.</div>
                                     </li>
                                     <li>
                                         <h3>
-                                        <span class="number">4</span>
+                                        <span class="number">3. </span>
                                         What is the cost?
                                         </h3>
                                         <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and can't afford the travel expenses, don't hesitate to contact us at <a href="mailto: egpd2022@erdw.ethz.ch"> egpd2022@erdw.ethz.ch </a> to learn about financial opportunities. <br></div>
