--- a/oursponsors.html
+++ b/oursponsors.html
@@ -58,6 +58,7 @@
                     <div class="row gtr-uniform">
                         <div class="col-4"><span class="image fit"><img src="images/sponsors/SmartSoloLogo.jpg" alt=""></span></div>
                         <div class="col-4"><span class="image fit"><img src="./images/sponsors/RWE.jpg" alt=""></span></div>
+                        <div class="col-4"><span class="image fit"><img src="./images/vag2.png" alt=""></span></div>
                     </div>
             </section>
             
