--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>#EGPD2022 Aachen<em> Free of charge!</em></h2>
-						<a href="about.html" class="button">Learn More</a>
+						<h2>The schedule of the #EGPD2022 Aachen<em> is online!</em></h2>
+						<a href="schedule.html" class="button">EGPD's Schedule</a>
 					</header>
 				</section>
-
                 
                 <section class="wrapper style1">
                     <div class="container">
