--- a/schedule.html
+++ b/schedule.html
@@ -41,15 +41,45 @@
 				</div>
 
 			<!-- Main -->
-            <!-- Gigantic Heading -->
-            <section class="wrapper style2">
+            <section class="wrapper style1">
                 <div class="container">
-                    <header class="major">
-                        <h2>Guest Speakers</h2>
-                        <p>Yet to be confirmed.</p>
-                    </header>
+                    <div class="row gtr-200">
+                        <div class="col-8 col-12-narrower">
+                            <div id="content">
+
+                                <!-- Content -->
+                                <article>
+                                    <header>
+                                        <h2>Checkout EGPD's Schedule!</h2>
+                                    </header>
+
+                                    <span class="image featured"><img src="images/egpdschedule.png" alt="" /></span>
+                                    
+                                </article>
+
+                            </div>
+                        </div>
+                        
+                        <div class="col-4 col-12-narrower">
+                            <div id="sidebar">
+
+                                <!-- Sidebar -->
+
+                                <section>
+                                    <h3>Highlights of the event! </h3>
+                                    <p>We are very happy to announce our great keynote speakers: Magdalena Scheck-Wenderoth (GFZ - Potsdam), and Marit Brommer (IGA).</p>
+                                    <p>Additionally we will have a site visit to Weiseiller. Here, an exploratory drilling phase from the premises of the Weisweiler power plant is scheduled for the second half of the year.
+                                        This geothermal power plant will play a key role in reducing the carbon emissions of Germany. 
+                                    </p>
+                                    <span class="image featured"><img src="images/weisweiler.jpg" alt="" /></span>
+                                </section>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
+
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
