--- a/oursponsors.html
+++ b/oursponsors.html
@@ -56,11 +56,11 @@
             <section class="wrapper style1">
                 <div class="container">
                     <div class="row gtr-uniform">
-                        <div class="col-4"><span class="image fit"><img src="./images/sponsors/RWE.jpg" alt=""></span></div>
-                        <div class="col-4"><span class="image fit"><img src="images/sponsors/geoverbund_logo.pdf" alt=""></span></div>
-                        <div class="col-4"><span class="image fit"><img src="images/sponsors/SmartSoloLogo.jpg" alt=""></span></div>
+                        <div class="col-3"><span class="image fit"><img src="./images/sponsors/RWE.jpg" alt=""></span></div>
+                        <div class="col-3"><span class="image fit"><img src="images/sponsors/geoverbund_logo.png" alt=""></span></div>
+                        <div class="col-3"><span class="image fit"><img src="images/sponsors/SmartSoloLogo.jpg" alt=""></span></div>
 
-                        <div class="col-4"><span class="image fit"><img src="./images/sponsors/vaglogo.pdf" alt=""></span></div>
+                        <div class="col-3"><span class="image fit"><img src="./images/sponsors/vaglogo.png" alt=""></span></div>
                     </div>
             </section>
             
