--- a/schedule.html
+++ b/schedule.html
@@ -68,10 +68,7 @@
                                 <section>
                                     <h3>Highlights of the event! </h3>
                                     <p>We are very happy to announce our great keynote speakers: Magdalena Scheck-Wenderoth (GFZ - Potsdam), and Marit Brommer (IGA).</p>
-                                    <p>Additionally we will have a site visit to Weiseiler. Here, an exploratory drilling phase from the premises of the Weisweiler power plant is scheduled for the second half of the year.
-                                        This geothermal power plant will play a key role in reducing the carbon emissions of Germany. 
-                                    </p>
-                                    <span class="image featured"><img src="images/weisweiler.jpg" alt="" /></span>
+                                    <p>Additionally we will have a very exciting site visit which will be announced soon.</p>
                                 </section>
 
                             </div>
