--- a/schedule.html
+++ b/schedule.html
@@ -53,7 +53,7 @@
                                         <h2>Checkout EGPD's Schedule!</h2>
                                     </header>
 
-                                    <span class="image featured"><img src="images/egpdschedule.png" alt="" /></span>
+                                    <span class="image featured"><img src="images/egpdschedule.pdf" alt="" /></span>
                                     
                                 </article>
 
