--- a/oursponsors.html
+++ b/oursponsors.html
@@ -60,6 +60,7 @@
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/SmartSoloLogo.jpg" alt=""></span></div>
 
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/vaglogo.png" alt=""></span></div>
+                        <div class="col-3"><span class="image fit"><img src="./images/sponsors/fpi.pdf" alt=""></span></div>
                     </div>
             </section>
             
