--- a/oursponsors.html
+++ b/oursponsors.html
@@ -58,7 +58,7 @@
                     <div class="row gtr-uniform">
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/RWE.jpg" alt=""></span></div>
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/SmartSoloLogo.jpg" alt=""></span></div>
-
+                        <div class="col-3"><span class="image fit"><img src="./images/sponsors/geoverbund_logo.pdf" alt=""></span></div>
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/vaglogo.png" alt=""></span></div>
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/fpi.pdf" alt=""></span></div>
                     </div>
