--- a/schedule.html
+++ b/schedule.html
@@ -67,7 +67,7 @@
 
                                 <section>
                                     <h3>Highlights of the event! </h3>
-                                    <p>We are very happy to announce our great keynote speakers: Magdalena Scheck-Wenderoth (GFZ - Potsdam), and Marit Brommer (IGA).</p>
+                                    <p>We are very happy to announce our great keynote speakers: Magdalena Scheck-Wenderoth (GFZ - Potsdam), Domenico Liotta, Antonio Pio Rinaldi, Anna Thiel, and Marit Brommer (IGA).</p>
                                     <p>Additionally we will have a very exciting site visit which will be announced soon.</p>
                                 </section>
 
