--- a/schedule.html
+++ b/schedule.html
@@ -50,10 +50,10 @@
                                 <!-- Content -->
                                 <article>
                                     <header>
-                                        <h2>Checkout EGPD's Schedule!</h2>
+                                        <h2>Check out EGPD's Schedule!</h2>
                                     </header>
 
-                                    <span class="image featured"><img src="images/egpd_schedule.pdf" alt="" /></span>
+                                    <span class="image featured"><img src="images/egpd_schedule.png" alt="" /></span>
                                     
                                 </article>
 
