--- a/oursponsors.html
+++ b/oursponsors.html
@@ -61,6 +61,7 @@
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/vaglogo.png" alt=""></span></div>
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/geoverbund_logo2.png" alt=""></span></div>
                         <div class="col-3"><span class="image fit"><img src="./images/sponsors/fpi.png" alt=""></span></div>
+                        <div class="col-2"><span class="image fit"><img src="./images/sponsors/sequent_logo.png" alt=""></span></div>
                     </div>
             </section>
             
