--- a/schedule.html
+++ b/schedule.html
@@ -51,9 +51,11 @@
                                 <article>
                                     <header>
                                         <h2>Check out EGPD's Schedule!</h2>
+                                        <h3>Remember to check your poster session below</h3>
                                     </header>
 
                                     <span class="image featured"><img src="images/egpd_schedule.png" alt="" /></span>
+                                    <span class="image featured"><img src="images/poster_schedule.png" alt="" /></span>
                                     
                                 </article>
 
