--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -95,7 +95,7 @@
                         
                         <div class="col-4 col-12-narrower">
                             <div id="sidebar">
-                                <span class="image featured"><img src="images/venue.jpg" alt="" /></span>
+                                <span class="image featured"><img src="images/Glasgow.jpg" alt="" /></span>
                                 <h3>Venues </h3>
                                 <p> University of Glagow, Glasgow G12 8QQ. </p>
 				<p> University of Strathclyde, 16 Richmond St, Glasgow G1 1XQ. </p>
@@ -111,7 +111,7 @@
             <section class="wrapper style2">
                 <div class="container">
                     <header class="major">
-                        <img src="images/logo.png" alt="logo" width="300">
+                        <img src="images/egpd.png" alt="egpd" width="300">
                         <h4> xxx </h4>
                     </header>
                 </div>
